--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MERN STACK Todo PWA APP",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "start:dev":"nodemon index.js"
   },
   "author": "Shashank Dubey",
   "license": "ISC",
